--- a/floats.html
+++ b/floats.html
@@ -4,12 +4,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" type="text/css" href="./styles/base.css">
     <title></title>
   </head>
   <body>
     <header>
       <nav>
-        Links to other pages will go <button>here</button> and <button>here</button>
+        Links to other pages will go <button>flexy</button> and <button>griddy</button>
       </nav>
     </header>
     <main>
@@ -32,6 +33,8 @@
         <article>
           article e
         </article>
+        <!-- one big thing at the bottom -->
+      <footer>f</footer>
     </main>
   </body>
 </html>
