added borders to some boxes

--- a/floats.html
+++ b/floats.html
@@ -14,7 +14,8 @@
       </nav>
     </header>
     <main>
-      <!-- these will live side by side -->
+      
+      <!-- these will live one on top of the other and they'll be big -->
       <article>
         article a
       </article>
@@ -25,7 +26,7 @@
       <div>
         c
       </div>
-      <!-- these will live one on top of the other -->
+      <!-- these will live side by side -->
 
       <article>
           article d
