--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type="text/css" href="./styles/base.css">
     <title></title>
   </head>
-  <body>
+  <body id="grid">
     <header>
       <nav>
         Links to other pages will go <button>flexy</button> and <button>griddy</button>
