--- a/floats.html
+++ b/floats.html
@@ -10,7 +10,7 @@
   <body id="floats">
     <header>
       <nav>
-        Links to other pages will go <button>flexy</button> and <button>griddy</button>
+        Links to other pages will go <a href="flexbox.html"><button>flexy</button></a> and  <a href="grid.html"><button>griddy</button></a>
       </nav>
     </header>
     <main>
