--- a/flexbox.html
+++ b/flexbox.html
@@ -10,7 +10,7 @@
   <body id="flexbox">
     <header>
       <nav>
-        Links to other pages will go <button>floaty</button> and <button>griddy</button>
+        Links to other pages will go <a href="floats.html"><button>floaty</button></a> and <a href="grid.html"><button>griddy</button></a>
       </nav>
     </header>
     <main>
