--- a/pages/grid.html
+++ b/pages/grid.html
@@ -10,7 +10,7 @@
   <body id="grid">
     <header>
       <nav>
-        Links to other pages will go <a href="floats.html"><button>floaty</button></a> and <a href="flexbox.html"><button>flexy</button></a>
+        Links to other pages will go <a href="floats.html"><button>floaty</button></a> and <a href="./flexbox.html"><button>flexy</button></a>
       </nav>
     </header>
     <main>
