--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -4,13 +4,16 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="stylesheet" type="text/css" href="./styles/base.css">
+      <link rel="stylesheet" type="text/css" href="../styles/reset.css">
+      <link rel="stylesheet" type="text/css" href="../styles/base.css">
+      <link rel="stylesheet" type="text/css" href="../styles/layout.css">
+      <link rel="stylehseet" type="text/css" href="../styles/modules.css">
     <title></title>
   </head>
   <body id="flexbox">
     <header>
       <nav>
-        Links to other pages will go <a href="floats.html"><button>floaty</button></a> and <a href="./grid.html"><button>griddy</button></a>
+        Links to other pages will go <a href="index.html"><button>floaty</button></a> and <a href="./grid.html"><button>griddy</button></a>
       </nav>
     </header>
     <main>
